Add --no-cache option if git branc is origin/master